syntax = "proto3";
import "empty.proto";
package training;
option go_package = "./;pb";

import "google/protobuf/timestamp.proto";

service CustomerService {
  rpc Create (Customer) returns (Customer);
  rpc Update (Customer) returns (Customer);
  rpc ChangePassword(ChangePasswordRequest) returns(Empty);
  rpc BookingHistory(BookingHistoryRequest) returns (BookingHistoryResponse);
}

message Customer {
  string id = 1;
  string name = 2;
  string address = 3;
  string license_id = 4;
  string phone_number = 5;
  string email = 6;
  string password = 7;
  bool  active = 8;
}

message ChangePasswordRequest {
  string password = 1;
  string id = 2;
}

message BookingHistoryRequest {
  string customer_id = 1;
}

message BookingHistoryResponse  {

}